fixed alignment of Navtop & Footer

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -14,5 +14,5 @@
 
 .footerLink:hover{
     transform: scale(1.3);
-    rotate: 10d;
+    rotate: 2deg;
 }
