--- a/src/components/TopNavbar/topnavbar.css
+++ b/src/components/TopNavbar/topnavbar.css
@@ -5,6 +5,7 @@
 .nav-link:hover{
   transform: scale(1.3);
   color: white;
+  rotate: 2deg;
 }
 
 /* Color of the navbar AFTER scroll */
@@ -31,10 +32,14 @@
   font-size: 1.75rem;
   letter-spacing: 5px;
 }
+
+.nav-item{
+  white-space: nowrap;
+}
 .rightBlock{
   float: right;
   text-align: right;
-  padding-right: 5%;
+  padding-right: 10%;
 }
 
 .bakeryLogo{
